# sepraps

./: .gitignore  .ignore  .pre-commit-config.yaml  HACKING.md  LICENSE  NOTICE  Procfile.dev  README.md  Vagrantfile  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  setup.cfg
back/: .gitignore  front_build  manage.py  requirements.txt  socialcomponentmonitoring.json  socialcomponenttraining.json
back/app/: apps.py  urls.py  util.py
back/back/: exceptions.py  settings.py  spa.py  urls.py  wsgi.py
back/documents/: apps.py  folder_utils.py  models.py  serializers.py  storage.py  urls.py  views.py
back/domains/: admin.py  mixins.py  models.py  serializers.py  urls.py  views.py
back/log/: admin.py  middleware.py  models.py
back/monitoring/: urls.py
back/questionnaires/: models.py  renderers.py  serializers.py  services.py  urls.py  views.py
back/users/: README.md  api.py  constants.py  jwt.py  models.py  permissions.py  serializers.py  urls.py
bd/: sqitch.plan
bd/deploy/: create_relationship_project_questionnaire.sql  update_construction_contract_dates.sql
bd/revert/: create_tables_sepraps.sql  insert_records_profiles.sql  update_contacts_relationships.sql  update_financing_program_relationship.sql  update_table_milestone_comments.sql  update_table_mqinstances_extended.sql
bd/tests/: create_table_log_request.sql  create_tables_django_admin.sql  update_contacts_relationships.sql  update_financing_program_relationship.sql  update_table_milestone_comments.sql
bd/verify/: create_table_log_request.sql  update_table_milestone.sql
db/: sqitch.conf  sqitch.plan
db/deploy/: create_table_amendment.sql  create_table_certification.sql  create_table_connection.sql  create_table_log_request.sql  create_table_project_works.sql  create_tables_payments.sql  create_tables_phase2.sql  create_tables_project_components.sql  create_tables_services_areas.sql  create_views_project_progress.sql  insert_records_profiles.sql  update_architecture_phase2.sql  update_componentes_order_name.sql  update_contacts_relationships.sql  update_content_type_amendment.sql  update_content_type_connections.sql  update_content_type_contacts.sql  update_content_type_contract_service.sql  update_content_type_cs_value.sql  update_contract_contacts_staff.sql  update_contract_lot_insurances.sql  update_domains_new_project_types.sql  update_dominios_payments_contracts.sql  update_financing_program_relationship.sql  update_payments_by_products.sql  update_supervision_staff_and_domains.sql  update_table_milestone.sql  update_tables_dynamic_fields.sql
db/revert/: create_table_amendment.sql  create_table_certification.sql  create_table_connection.sql  create_table_project_works.sql  create_tables_payments.sql  create_tables_phase2.sql  create_tables_project_components.sql  create_tables_services_areas.sql  create_views_project_progress.sql  update_architecture_phase2.sql  update_componentes_order_name.sql  update_content_type_amendment.sql  update_content_type_connections.sql  update_content_type_contacts.sql  update_content_type_contract_service.sql  update_content_type_cs_value.sql  update_contract_contacts_staff.sql  update_contract_lot_insurances.sql  update_domains_new_project_types.sql  update_dominios_payments_contracts.sql  update_payments_by_products.sql  update_supervision_staff_and_domains.sql  update_table_project_image.sql  update_tables_dynamic_fields.sql
db/tests/: create_relationship_project_questionnaire.sql  create_table_amendment.sql  create_table_certification.sql  create_table_connection.sql  create_table_project_works.sql  create_tables_payments.sql  create_tables_phase2.sql  create_tables_project_components.sql  create_tables_sepraps.sql  create_tables_services_areas.sql  create_views_project_progress.sql  update_architecture_phase2.sql  update_componentes_order_name.sql  update_content_type_amendment.sql  update_content_type_connections.sql  update_content_type_contacts.sql  update_content_type_contract_service.sql  update_content_type_cs_value.sql  update_contract_contacts_staff.sql  (+6 more)
docs/: deployment.md  glossary.md  instalacion.md  mantenimiento.md
front/: .eslintrc.cjs  i18n.config.js  index.html  jsconfig.json  lingui.config.js  package-lock.json  package.json  vite.config.js
front/public/: index.html
scripts/: copy_module.sh  create_notice.sh  deploy.sh  fixtures.sh  install.back.sh  install.front.sh  install.link_back_front.sh  install.sh  load_maestros.sh  load_sample_data.sh  pre-deploy.sh  python_notice.py  reset_and_create_db.sh  reset_db_and_migrations.sh  start.sh  test.sh
server/: add_default_user.sh  bootstrap.sh  config_gunicorn_service.sh  create_python_virtualenv_project.sh  create_virtualenv_from_source.sh  drop_and_create_db.sh  first_time_deploy.sh  fix_locales.sh  install_apache.sh  install_fail2ban.sh  install_gdal.sh  install_letsencrypt.sh  install_others.sh  install_postgres.sh  install_pyenv.sh  install_python_from_source.sh  install_ufw.sh  other_time_deploy.sh  own_settings.sh  set_hostname_and_ip.sh  variables.ini
sqitch/: sqitch.plan
tools/: LICENSE  database.py  db_utils.sh  fixtures.sh
(+2492 files in other folders)
