[tool.pyright]
executionEnvironments = [{ root = "back" }]

[build-system]
requires = ["setuptools==65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sepraps"
version = "0.0.1"
authors = [
  { name="iCarto", email="info@icarto.es" },
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Private :: Do Not Upload"
]
requires-python = "==3.11.*"
dependencies = [
    "Django==4.2",
    "django-cors-headers==3.14.0",
    "django-environ==0.10.0",
    "django-extensions==3.2.1",
    "django-filter==23.1",
    "django-spa==0.3.6",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.2.2",
    "djangorestframework-gis==1.0",
    "drf-extensions==0.7.1",
    "psycopg[binary]==3.1.8",
    "geopandas==0.12.2",
    "openpyxl==3.1.2 ",
    "Pillow==10.0.0 ",
    "django-debug-toolbar==4.0.0",
    "drf-spectacular==0.26.2",
    "sentry-sdk==1.20.0",
]



[tool.setuptools]
package-dir = {"sepraps" = "back"}
include-package-data = true

[tool.setuptools.package-data]
# *.css *.woff *.svg *.js *.gif *.ico *.png *.jpg *.html *.js.map
"sepraps.static" = ["**"]
"sepraps.templates" = ["**"]
"sepraps.app.data" = ["**"]

[tool.ruff]
extend = "./config/pyproject.toml"

extend-exclude = [
    "/**/migrations/*", # folders excluded when working with django
]

[tool.ruff.lint]
extend-ignore = ["ANN", "ERA", "TCH"]


[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#isort-known-third-party
known-first-party = [
    "app",
    "back",
    "documents",
    "domains",
    "users",
    "questionnaires",
    "log",
]

